// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default iframe 1`] = `
<iframe
  src="http://www.foobar.com"
  style={
    Object {
      "display": "block",
      "position": "relative",
    }
  }
/>
`;

exports[`Render iframe with title 1`] = `
<iframe
  allow="encrypted-media"
  aria-hidden={true}
  aria-label="someLabel"
  aria-labelledby="someId"
  className="myIframeClass"
  id="myIframeId"
  loading="eager"
  name="My Iframe name"
  onLoad={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  sandbox="allow-scripts"
  scrolling="yes"
  src="http://www.foo.com"
  style={
    Object {
      "border": 0,
      "display": "inline-block",
      "overflow": "auto",
      "position": "relative",
    }
  }
  styles={
    Object {
      "background": "red",
    }
  }
  target="_self"
  title="A foobared iframe"
/>
`;

exports[`Render with allow attribute 1`] = `
<iframe
  allow="fullscreen autoplay"
  src="http://www.foobar.com"
  style={
    Object {
      "border": 1,
      "display": "block",
    }
  }
/>
`;

exports[`Render with allowFullscreen bool 1`] = `
<iframe
  allow="fullscreen"
  src="http://www.foobar.com"
  style={
    Object {
      "border": 1,
      "display": "block",
    }
  }
/>
`;
